# elysia-ai

./: .gitattributes  README.md  app.py
backend/: main.py  pyproject.toml  requirements.txt  schemas.py
backend/utils/: predict.py  preprocess.py  test_api.py
